--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -6,5 +6,8 @@
     <dimen name="kebap_padding_middle">10dp</dimen>
     <dimen name="actionbar_height">48dp</dimen>
     <dimen name="page_indicator_size">10dip</dimen>
+    <dimen name="page_indicator_padding">5dip</dimen>
+    
+    <integer name="fast_animation">200</integer>
 
 </resources>
